# PlotGenerator

./: LICENSE  README.md  pyproject.toml  requirement.txt  setup.py
.github/workflows/: TestPyPI.yml  python-publish.yml
code/: imageJ_tool.py  main.py  plot_FTIR.py  test.py
docs/: Component Specification  Component Specification.md  Function Specification  Function Specification.md
examples/: 1_15_1_7_1_PP_mRNA_1_1_LHP_Mannose_1ug_green.tif  1_15_1_7_1_PP_mRNA_1_1_LHP_Mannose_3ug_green.tif  1_15_1_7_1_PP_mRNA_1_2_LHP_Mannose_1ug_green.tif  1_15_1_7_1_PP_mRNA_1_2_LHP_Mannose_3ug_green.tif  1_15_1_7_1_PP_mRNA_2_1_LHP_Mannose_1ug_green.tif  1_15_1_7_1_PP_mRNA_2_1_LHP_Mannose_3ug_green.tif  1_15_1_7_1_PP_mRNA_LHP_1ug_green.tif  1_15_1_7_1_PP_mRNA_LHP_3ug_green.tif  1_15_1_7_1_PP_mRNA_Mannose_1ug_green.tif  1_15_1_7_1_PP_mRNA_Mannose_3ug_green.tif  1_15_2_7_1_PP_mRNA_Mannose_1ug_green.tif  1_15_2_7_1_PP_mRNA_Mannose_3ug_green.tif  FTIR.xlsx
examples/image_processed/: 1_15_1_7_1_PP_mRNA_1_1_LHP_Mannose_1ug_green.tif  1_15_1_7_1_PP_mRNA_1_1_LHP_Mannose_3ug_green.tif  1_15_1_7_1_PP_mRNA_1_2_LHP_Mannose_1ug_green.tif  1_15_1_7_1_PP_mRNA_1_2_LHP_Mannose_3ug_green.tif  1_15_1_7_1_PP_mRNA_2_1_LHP_Mannose_1ug_green.tif  1_15_1_7_1_PP_mRNA_2_1_LHP_Mannose_3ug_green.tif  1_15_1_7_1_PP_mRNA_LHP_1ug_green.tif  (+5 more)
plotGenerator/: __init__.py  plot_FTIR.py  requirements.txt  setup.py  test.py  utils.py
plotGenerator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
plotGeneratorPL.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test.py
(+15 files in other folders)
