[project]
name='imageProcessor',
    version='1.0',
    include_package_data=True,
    author='PiceaLiu',
    license="MIT",
    dependencies = [
    numpy==1.21.2,
    pandas==1.3.3,
    matplotlib==3.4.3,
    opencv-python==4.5.3.56
]
readme = "README.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
