[project]
name='imageProcessor',
    version='1.0',
    include_package_data=True,
    author='PiceaLiu',
    dependencies = [
    numpy==1.21.2,
    pandas==1.3.3,
    matplotlib==3.4.3,
    opencv-python==4.5.3.56
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
